# advent-of-code_2021

./: README.rst  pyproject.toml
src/advent_of_code/: __init__.py  aoc.py
